zero-schema-derive/tests/ui/fail/08_tag_paths.stderr
error: expected identifier
 --> tests/ui/fail/08_tag_paths.rs:3:34
  |
3 | #[derive(ZeroSchema)] #[zero(tag=<Tag as Trait>::Assoc)] enum Qualified { #[zero(tag=Tag::A)] A }
  |                                  ^

error: expected `,`
 --> tests/ui/fail/08_tag_paths.rs:3:34
  |
3 | #[derive(ZeroSchema)] #[zero(tag=<Tag as Trait>::Assoc)] enum Qualified { #[zero(tag=Tag::A)] A }
  |                                  ^

error: scalar enums require exactly one #[repr(u8)], #[repr(u16)], or #[repr(u32)]
 --> tests/ui/fail/08_tag_paths.rs:3:63
  |
3 | #[derive(ZeroSchema)] #[zero(tag=<Tag as Trait>::Assoc)] enum Qualified { #[zero(tag=Tag::A)] A }
  |                                                               ^^^^^^^^^

error: scalar enums do not accept `tag`
 --> tests/ui/fail/08_tag_paths.rs:3:30
  |
3 | #[derive(ZeroSchema)] #[zero(tag=<Tag as Trait>::Assoc)] enum Qualified { #[zero(tag=Tag::A)] A }
  |                              ^^^

error: scalar enum variants do not accept `tag`
 --> tests/ui/fail/08_tag_paths.rs:3:86
  |
3 | #[derive(ZeroSchema)] #[zero(tag=<Tag as Trait>::Assoc)] enum Qualified { #[zero(tag=Tag::A)] A }
  |                                                                                      ^^^

error: scalar enum variants require explicit discriminants
 --> tests/ui/fail/08_tag_paths.rs:3:75
  |
3 | #[derive(ZeroSchema)] #[zero(tag=<Tag as Trait>::Assoc)] enum Qualified { #[zero(tag=Tag::A)] A }
  |                                                                           ^

error: duplicate zero option `tag`
 --> tests/ui/fail/08_tag_paths.rs:4:75
  |
4 | #[derive(ZeroSchema)] #[zero(tag=Tag)] enum Repeated { #[zero(tag=Tag::A, tag=Tag::A)] A }
  |                                                                           ^^^

error: expected `,`
 --> tests/ui/fail/08_tag_paths.rs:4:78
  |
4 | #[derive(ZeroSchema)] #[zero(tag=Tag)] enum Repeated { #[zero(tag=Tag::A, tag=Tag::A)] A }
  |                                                                              ^
